docs: removed some dummy text, added folder for content related articles

--- a/storefront/pages/god-praksis/designprinsipper.mdx
+++ b/storefront/pages/god-praksis/designprinsipper.mdx
@@ -18,18 +18,17 @@ export default ({ children, menu }) => (
   />
 );
 
-## Sett brukernes behov først
-
+**Sett brukernes behov først** <br/>
 Vi bruker innsikt om brukernes behov aktivt når vi utvikler produktene våre. Alle apper skal løse ekte problemer for brukerne. Vi tar beslutninger basert på undersøkelser og brukerinnsikt.
 
-Skjul kompleksitet
-Vi lager enkle og tydelige apper og fjerner design, tekst, steg eller elementer som gjør det vanskelig for brukerne eller gir dem for stor kognitiv belastning. Tjenestene våre kan være komplekse på baksiden, men brukeren skal oppfatte dem som enkle og brukervennlige.
+**Skjul kompleksitet** <br/>
+Vi lager enkle og tydelige apper og fjerner unødvendige elementer som gjør det vanskelig for brukerne eller gir dem for stor kognitiv belastning. Tjenestene våre kan være komplekse på baksiden, men brukeren skal oppfatte dem som enkle og brukervennlige.
 
-Skap helhet
+**Skap helhet** <br/>
 Produktene våre skal henge sammen slik at folk får en helhetlig brukeropplevelse. Vi bruker konsekvent språk og de samme komponentene i alle apper. Brukerne skal kjenne seg igjen, uansett hvilken del av produktet de bruker.
 
-Lag et motiverende visuelt design
+**Lag et motiverende visuelt design** <br/>
 Det visuelle designet skal gjøre brukerne trygge i dialogen med det offentlige og de skal oppleve at vi er vennlige. Vi designer et enklere grensesnitt med tydelige interaksjonselementer og fargesterke illustrasjoner, slik at vi skaper en god atmosfære. Alle visuelle elementer som krever at brukeren gjør noe skal være tydelige.
 
-Sørg for at appene er tilgjengelige for alle
+**Sørg for at appene er tilgjengelige for alle** <br/>
 Vi lager tjenester som er tilgjengelige for alle og tester på UU-krav. Vi gjenbruker komponenter for å gi brukerne best mulig tilgjengelighet.
