--- a/storefront/pages/grunnleggende/design/for-designere.mdx
+++ b/storefront/pages/grunnleggende/design/for-designere.mdx
@@ -46,7 +46,7 @@ Noen komponenter kommer med ulike varianter og egenskaper. I Button-komponenten 
 
 [bilde-eksempel]
 
-## Kom i gang med komponenter
+## Kom i gang med stiler
 
 Stilene vil være tilgjengelige i høyremargen når du for eksempel skal velge en farge eller font og du trykker på de fire dottene.
 
