--- a/storefront/pages/grunnleggende/kode/for-utviklere.mdx
+++ b/storefront/pages/grunnleggende/kode/for-utviklere.mdx
@@ -19,8 +19,6 @@ export default ({ children, menu }) => (
   />
 );
 
-Writing theory know to choose morning, young operations concepts what one her stands sentences and pointing judgment, as it at it founder, myself suggests the it many simply. The than think more, use. Moment. Paint, to in than starting actual decided but of volume had this primarily way had I.
-
 ## Design tokens
 
 ### Kom i gang
@@ -55,3 +53,7 @@ import tokens from "@digdir/design-system-tokens/build/tokens"
 const myTextColor = tokens.color.text.background.light'
   language='javascript'
 />
+
+## Utvikling av designsystemet
+
+Den beste måten å komme i gang med utvikling av selve designsystemet er å følge instruksjonene som står beskrevet i [Readme](https://github.com/digdir/designsystem#----------felles-designsystem).
