--- a/storefront/pages/grunnleggende/styling/farger.mdx
+++ b/storefront/pages/grunnleggende/styling/farger.mdx
@@ -3,8 +3,8 @@ import { PageLayout } from '../../../layouts';
 export { getServerSideProps } from '../../../utils/menus/PageMenu';
 
 <Meta
-  title='Farger'
-  description='Beskrivelse'
+  title='Fargesystem'
+  description='Fargesystemet består av globale farger og et semantisk nivå som beskriver hva fargen skal brukes til.'
 />
 
 export default ({ children, menu }) => (
@@ -12,17 +12,13 @@ export default ({ children, menu }) => (
     content={children}
     menu={menu}
     data={{
-      title: 'Farger',
+      title: 'Fargesystem',
       date: '25. mars 2023',
       showMenu: true,
     }}
   />
 );
 
-## Heading 2
+Fargesystemet består av globale farger og et semantisk nivå som beskriver hva fargen skal brukes til.
 
-asdasd
-
-### Heading 3
-
-asdasd
+## Globale farger
