--- a/storefront/pages/index.mdx
+++ b/storefront/pages/index.mdx
@@ -13,14 +13,14 @@ export default ({ children }) => (
     data={{
       title: 'Felles Designsystem',
       description:
-        'Felles designsystem består av grunnleggende designelementer og komponenter du kan bruke når du utvikler tjenester. Etter hvert håper vi at dette kan bli en felles verktøykasse der vi samarbeider om å lage det beste grunnlaget for offentlige tjenester.',
+        'Felles designsystem består av grunnleggende designelementer og komponenter du kan bruke når du utvikler tjenester. Vi håper dette kan bli en felles verktøykasse der vi samarbeider på tvers om å lage det beste grunnlaget for offentlige tjenester.',
       navigationCards: {
         title: 'Kom i gang',
         items: [
           {
             title: 'For designere',
             description:
-              'Lær hvordan du kan komme i gang med designsystemet som designer.',
+              'Lær hvordan du kommer i gang med designsystemet som designer.',
             color: 'blue',
             url: '/grunnleggende/design/for-designere',
             icon: <ImageIcon fontSize={34} />,
@@ -28,7 +28,7 @@ export default ({ children }) => (
           {
             title: 'For utviklere',
             description:
-              'Lær hvordan du kan komme i gang med designsystemet som utvikler',
+              'Lær hvordan du kommer i gang med designsystemet som utvikler.',
             color: 'yellow',
             url: '/grunnleggende/kode/for-utviklere',
             icon: <WrenchIcon fontSize={36} />,
