➕ Installed mdx-embed to support figma embed in MDX files

--- a/storefront/pages/grunnleggende/styling/design-tokens.mdx
+++ b/storefront/pages/grunnleggende/styling/design-tokens.mdx
@@ -1,6 +1,7 @@
 import Meta from '../../../components/Meta/Meta';
 import { PageLayout } from '../../../layouts';
 export { getServerSideProps } from '../../../utils/menus/PageMenu';
+import { Figma } from 'mdx-embed';
 
 <Meta
   title='Design Tokens'
@@ -25,6 +26,11 @@ Tokens er fleksible verdier som sikrer at designere og utviklere jobber med de s
 ## Tokens
 
 Her er en liste over tokens som er tilgjengelig i NPM pakken `@digdir/design-system-tokens`.
+
+<Figma
+  title='Boop'
+  url='file/vpM9dqqQPHqU6ogfKp5tlr/Felles-komponenter?node-id=6801%3A29775&t=igPXZdVyL2UpkpFe-1'
+/>
 
 ### Farger
 
